[package]
name = "zest-pam-core"
version = "0.1.0"
description = "Rust FFI bindings to PAM (Pluggable Authentication Modules)"
license = "MIT"
edition.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["safe-wrappers"]
generate-bindings = ["dep:bindgen"]
safe-wrappers = [
  "dep:derive_more",
  "dep:libc",
  "dep:num_enum",
]
zeroize = ["dep:zeroize"]

[dependencies]
derive_more = { version = "2", default-features = false, optional = true, features = ["display", "error"] }
libc = { version = "0.2", default-features = false, optional = true }
num_enum = { version = "0.7", default-features = false, optional = true }
zeroize = { version = "1.8.2", default-features = false, optional = true }

[build-dependencies]
anyhow = "1"
bindgen = { version = "0.72", optional = true }
