[package]
name = "zest-pam-core"
version = "0.1.0"
description = "Rust FFI bindings to PAM (Pluggable Authentication Modules)"
license = "MIT"
edition.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["safe-wrappers"]
generate-bindings = ["dep:bindgen"]
safe-wrappers = [
  "dep:derive_more",
  "dep:libc",
  "dep:num_enum",
  "dep:zeroize",
]

[dependencies]
derive_more = { version = "2.1.1", optional = true, default-features = false, features = ["display", "error"] }
libc = { version = "0.2.183", optional = true, default-features = false }
num_enum = { version = "0.7.5", optional = true, default-features = false }
zeroize = { version = "1.8.2", optional = true, default-features = false, features = ["alloc"] }

[build-dependencies]
anyhow = "1.0.102"
bindgen = { version = "0.72.1", optional = true }
