[package]
name = "zest-pam-sys"
version = "0.1.0"
description = "Rust FFI Bindings to PAM (Pluggable Authentication Modules)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["safe-wrappers"]
generate-bindings = ["dep:bindgen"]
safe-wrappers = [
  "dep:derive_more",
  "dep:libc",
  "dep:num_enum",
]

[dependencies]
derive_more = { version = "2.1.1", default-features = false, optional = true, features = ["display", "error"] }
libc = { version = "0.2.183", default-features = false, optional = true }
num_enum = { version = "0.7.5", default-features = false, optional = true }

[build-dependencies]
anyhow = "1.0.102"
bindgen = { version = "0.72.1", optional = true }
